--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,3 +45,20 @@ jobs:
         path: target/surefire-reports/*.xml
         reporter: java-junit
         fail-on-error: true
+        
+    - name: Docker Login
+      uses: docker/login-action@v2.1.0
+      with:
+        # Username used to log against the Docker registry
+        username: ${{ secrets.DOCKER_HUB_USER_NAME }}
+        # Password or personal access token used to log against the Docker registry
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+        logout: true
+    - name: Build and push
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        push: true
+        tags: user/app:latest
+        cache-from: type=registry,ref=user/app:latest
+        cache-to: type=inline
