--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,7 +47,7 @@ jobs:
         fail-on-error: true
         
     - name: Docker Login
-      uses: docker/login-action@v2.1.0
+      uses: ./
       with:
         registry: ${{secrets.DOCKER_HUB_URL}}
         # Username used to log against the Docker registry
