--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,7 +50,7 @@ jobs:
       uses: actions/checkout@v3    
       
     - name: Docker Login
-      uses: ./
+      uses: docker/login-action@v2
       with:
         registry: ${{secrets.DOCKER_HUB_URL}}
         # Username used to log against the Docker registry
