--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,21 +47,16 @@ jobs:
         fail-on-error: true
         
     - name: Checkout
-      uses: actions/checkout@v3    
+      uses: actions/checkout@v2    
       
     - name: Docker Login
-      uses: docker/login-action@v2
-      with:
-        # Username used to log against the Docker registry
-        username: ${{ secrets.DOCKER_HUB_USER_NAME }}
-        # Password or personal access token used to log against the Docker registry
-        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-        
-    - name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        context: .
-        push: true
-        tags: user/app:latest
-        cache-from: type=registry,ref=user/app:latest
-        cache-to: type=inline
+      env:
+            DOCKER_USER: ${{secrets.DOCKER_HUB_USER_NAME}}
+            DOCKER_PASSWORD: ${{secrets.DOCKER_HUB_PASSWORD}}
+      run: |
+            docker login -u $DOCKER_HUB_USER_NAME -p $DOCKER_HUB_PASSWORD 
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag juazor45/retokyndryl:$(date +%s)
+
+    - name: Docker Push
+      run: docker push juazor45/retokyndryl
