--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -54,7 +54,7 @@ jobs:
             DOCKER_USER: ${{secrets.DOCKER_HUB_USER_NAME}}
             DOCKER_PASSWORD: ${{secrets.DOCKER_HUB_PASSWORD}}
       run: |
-            docker login -u $DOCKER_HUB_USER_NAME -p $DOCKER_HUB_PASSWORD 
+            docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag juazor45/retokyndryl:$(date +%s)
 
