--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,13 +50,20 @@ jobs:
       uses: actions/checkout@v2    
       
     - name: Docker Login
-      env:
-            DOCKER_USER: ${{secrets.DOCKER_HUB_USER_NAME}}
-            DOCKER_PASSWORD: ${{secrets.DOCKER_HUB_PASSWORD}}
-      run: |
-            docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
+      uses: docker/login-action@v2.1.0
+      with:
+        registry: https://hub.docker.com/r/juazor45/retokyndryl
+        username: zorrillagamarrajuanmanuel@gmail.com
+        password: 5042Maxsterling
+        # Specifies whether the given registry is ECR (auto, true or false)
+        ecr: true
+        # Log out from the Docker registry at the end of a job
+        logout: true
+
+            
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag juazor45/retokyndryl:$(date +%s)
 
     - name: Docker Push
       run: docker push juazor45/retokyndryl
+      
