--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -56,7 +56,7 @@ jobs:
         username: zorrillagamarrajuanmanuel@gmail.com
         password: 5042Maxsterling
         # Specifies whether the given registry is ECR (auto, true or false)
-        ecr: true
+        ecr: auto
         # Log out from the Docker registry at the end of a job
         logout: true
 
