--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Docker Login
       uses: docker/login-action@v2.1.0
       with:
-        registry: https://hub.docker.com/r/juazor45/retokyndryl
+        registry: https://index.docker.io
         username: zorrillagamarrajuanmanuel@gmail.com
         password: 5042Maxsterling
         # Specifies whether the given registry is ECR (auto, true or false)
