--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,15 +51,15 @@ jobs:
       
     - name: Docker Login
       uses: docker/login-action@v2.1.0
-      with:
-        username: zorrillagamarrajuanmanuel@gmail.com
-        password: 5042Maxsterling
-        logout: true
+#      with:
+#        username: zorrillagamarrajuanmanuel@gmail.com
+#        password: 5042Maxsterling
+#        logout: true
 
             
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag juazor45/retokyndryl:$(date +%s)
+#    - name: Build the Docker image
+#      run: docker build . --file Dockerfile --tag juazor45/retokyndryl:$(date +%s)
 
-    - name: Docker Push
-      run: docker push juazor45/retokyndryl
+#    - name: Docker Push
+#      run: docker push juazor45/retokyndryl
       
