--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,10 +51,10 @@ jobs:
       
     - name: Docker Login
       uses: docker/login-action@v2.1.0
-#      with:
-#        username: zorrillagamarrajuanmanuel@gmail.com
-#        password: 5042Maxsterling
-#        logout: true
+      with:
+        username: zorrillagamarrajuanmanuel@gmail.com
+        password: 5042Maxsterling
+        logout: true
 
             
 #    - name: Build the Docker image
