--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,17 +49,16 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2    
       
-    - name: Docker Login
-      uses: docker/login-action@v2.1.0
+    - name: Build and push Docker image
+      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
       with:
-        username: zorrillagamarrajuanmanuel@gmail.com
-        password: 5042Maxsterling
-        logout: true
-
-            
-#    - name: Build the Docker image
-#      run: docker build . --file Dockerfile --tag juazor45/retokyndryl:$(date +%s)
-
-#    - name: Docker Push
-#      run: docker push juazor45/retokyndryl
-      
+        context: .  //Contexto para el comando Docker
+        push: false //Indicamos si queremos hacer push de la imagen
+        tags: 'fixedbuffer/hello'
+        
+    - name: Login to DockerHub
+      if: github.ref == 'refs/heads/master'
+      uses: docker/login-action@v1 
+      with:
+         username: ${{ secrets.DOCKER_HUB_USER_NAME }}
+         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
