--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,13 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+           mkdir staging && cp target/*.jar staging
+           
+    - name: oersist Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: github-action-artifacts
+        path: staging
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
