--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,8 +28,9 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
-           mkdir staging && cp target/*.jar staging
+      run: |
+        mvn -B package --file pom.xml
+        mkdir staging && cp target/*.jar staging
            
     - name: oersist Artifact
       uses: actions/upload-artifact@v2
